working-in-flickering-issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,11 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
   background-color: #fff;
   border-radius: 15px;
 }
 
-html,
-body {
+html, body {
   display: flex;
   height: 100%;
   width: 100%;
@@ -27,12 +25,12 @@ body {
   background-color: #ffffff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   width: 94vw;
-  height: 100%; /* Adjust height as needed */
+  height: 100%;
   border-radius: 15px;
 }
 
 .audio-player audio {
-  display: none; /* Hide the default audio player controls */
+  display: none;
 }
 
 .controls-wrapper {
@@ -65,11 +63,13 @@ body {
   height: 10px;
   background-color: #ddd;
   margin: 0 10px;
+  overflow: hidden;
 }
 
 .progress-bar div {
   height: 100%;
   background-color: #000;
+  transition: width 0.1s ease;
 }
 
 .progress-time {
@@ -106,7 +106,6 @@ body {
   font-size: large;
 }
 
-/* Smooth Transitions for UI elements */
 .spectrogram-card, .spectrogram-container, .audio-analizer, .progress-bar div {
   transition: all 0.3s ease;
 }
